# ChangeLog for media-sound/rhythmbox
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.159 2009/09/08 06:33:21 eva Exp $

  08 Sep 2009; Gilles Dartiguelongue <eva@gentoo.org>
  rhythmbox-0.12.4.ebuild:
  Fix a typo in udev flag activation, bug #284037.

*rhythmbox-0.12.4 (06 Sep 2009)

  06 Sep 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +rhythmbox-0.12.4.ebuild, metadata.xml:
  Version bump. New Gudev code replacing hal for hardware detection, build
  and crash fixes. Translation updates.

  24 Aug 2009; Romain Perier <mrpouet@gentoo.org>
  rhythmbox-0.12.3-r2.ebuild:
  Add inheritance from autotools.eclass, without it the Makefile.am from
  lastfm plugin was patched without beeing regenerated

*rhythmbox-0.12.3-r2 (24 Aug 2009)

  24 Aug 2009; Romain Perier <mrpouet@gentoo.org>
  -rhythmbox-0.12.3-r1.ebuild, +rhythmbox-0.12.3-r2.ebuild,
  +files/rhythmbox-0.12.3-sigsegv-no-saveable-types.patch:
  Fix bug #282546, application crashed when song properties was opened,
  Patch import from upstream bug #590108.
  Clean up old revision.

  23 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -rhythmbox-0.12.2-r1.ebuild, -files/rhythmbox-0.12.2-link-fixes.patch,
  -rhythmbox-0.12.3.ebuild, rhythmbox-0.12.3-r1.ebuild:
  Update gst-plugins dependencies to require input-selector per bug #275643.
  Clean up old revisions.

*rhythmbox-0.12.3-r1 (09 Aug 2009)

  09 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +rhythmbox-0.12.3-r1.ebuild, +files/rhythmbox-0.12.3-lastfm.patch:
  Fix last.fm plugin linking, bug #276972.

*rhythmbox-0.12.3 (06 Jul 2009)

  06 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +rhythmbox-0.12.3.ebuild:
  Version bump. MPT, DAAP and CD ripping/playback fixes, plus misc
  enhancements.

  29 Jun 2009; <nirbheek@gentoo.org> rhythmbox-0.12.2-r1.ebuild:
  Add gtk-doc-am dep, needed for eautoreconf (bug 275773)

*rhythmbox-0.12.2-r1 (03 Jun 2009)
