@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/rhythmbox
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.159 2009/09/08 06:33:21 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.160 2009/09/28 20:40:09 eva Exp $
+
+*rhythmbox-0.12.5 (28 Sep 2009)
+
+  28 Sep 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +rhythmbox-0.12.5.ebuild:
+  Version bump, cover search now uses musicbrainz.
 
   08 Sep 2009; Gilles Dartiguelongue <eva@gentoo.org>
   rhythmbox-0.12.4.ebuild:
